{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "RightXRController",
            "id": "ac9a0513-6003-4f5a-a0e6-f7e8ed694b2d",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "45f8c144-f4eb-4343-92b3-f6d075dd0808",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "21fd79ee-acff-408f-87e3-e52b476a4a12",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1fbb4d1a-faf3-4cfc-9d51-7b7cde30090d",
                    "path": "<XRController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4aa6f707-93a7-49e5-ba02-7147ea9049bc",
                    "path": "<XRController>{RightHand}/pointerRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LeftXRController",
            "id": "e7605dfd-98ae-425c-8708-aa604d9549af",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "ee292256-98ff-484c-b58b-6bc5a47f6cbb",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "3891b01b-36be-48d0-aae1-9faa81e4f63e",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e72a383-a470-4e9f-8054-e27e4ab5554a",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8bfb158-d247-4555-9a5c-103673bd2efa",
                    "path": "<XRController>{LeftHand}/pointerRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}